--- a/SongScheduler/src/gui/HoldingsFilesWindow.form
+++ b/SongScheduler/src/gui/HoldingsFilesWindow.form
@@ -181,13 +181,13 @@
                   <Component id="makeNewFile" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
-              <Component id="jScrollPane1" alignment="1" pref="348" max="32767" attributes="1"/>
+              <Component id="jScrollPane1" alignment="1" min="-2" pref="348" max="-2" attributes="1"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <Component id="jScrollPane1" pref="195" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" min="-2" pref="195" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="selectHoldingFile" alignment="3" min="-2" max="-2" attributes="0"/>
